# mifral-assistant

./: .gitignore  MIGRATION.md  Makefile  README.md  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: embedding.py  generation.py  generation_protocol.py  main.py  models.py  store.py
backend/tests/: test_api.py
docs/: PRD.md  SRS.md
frontend/: Dockerfile  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  session.ts  types.ts
frontend/src/lib/components/: AssistantApp.svelte  KnowledgeOverlay.svelte  SettingsOverlay.svelte
frontend/src/lib/components/classroom/: CitationDisclosure.svelte
frontend/src/lib/design/: tokens.generated.css
frontend/src/lib/utils/: markdown.ts  providers.ts
frontend/src/routes/: +page.svelte
frontend/tests/: assistant-app.test.ts
