[project]
name = "assistant-backend"
version = "0.1.0"
description = "Standalone assistant extraction backend scaffold."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "psycopg2-binary>=2.9,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "pydantic>=2.8,<3.0",
  "sentence-transformers>=3.0,<4.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
